--- a/glazewm/home.yaml
+++ b/glazewm/home.yaml
@@ -156,7 +156,7 @@ workspaces:
     bind_to_monitor: 1
     keep_alive: true
   - name: "7"
-    display_name: "7_Camera"
+    display_name: "7_Network"
     bind_to_monitor: 1
     keep_alive: true
   - name: "8"
