--- a/glazewm/home.yaml
+++ b/glazewm/home.yaml
@@ -152,15 +152,15 @@ workspaces:
     bind_to_monitor: 1
     keep_alive: true
   - name: "6"
-    display_name: "6_Books"
+    display_name: "6_Network"
     bind_to_monitor: 1
     keep_alive: true
   - name: "7"
-    display_name: "7_Network"
+    display_name: "7_Fitness"
     bind_to_monitor: 1
     keep_alive: true
   - name: "8"
-    display_name: "8_Fitness"
+    display_name: "8_Read"
     bind_to_monitor: 1
     keep_alive: true
   - name: "9"
