--- a/glazewm/home.yaml
+++ b/glazewm/home.yaml
@@ -92,7 +92,7 @@ window_effects:
       enabled: false
       style: "square"
     transparency:
-      enabled: true
+      enabled: false
       opacity: "90%"
 
 window_behavior:
